Used flexbox to align items and fixed proportional scaling of rectangular divs.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,14 +46,24 @@ nav .logo {
   position: fixed;
   background: #3C58B9;
   height: 100%;
-  position: fixed;
+  /* Flex */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 #side-nav-logo {
-  display: block;
+  /* display: block; */
   width: 4.5em;
-  height: 4.5em;
-  margin: 1rem auto;
+  height: auto;
+  /* margin: 1rem auto; */
+}
+
+.side-icon-container {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .side-icon {
@@ -61,14 +71,7 @@ nav .logo {
   color: white;
   text-align: center;
   font-size: 2rem;
-  margin: 3.5rem 0;
-}
-
-.side-nav-footer {
-  bottom: 0;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  /* margin: 3.5rem 0; */
 }
 
 .balance {
@@ -112,18 +115,22 @@ nav .logo {
   background: #1c2c85;
   height: 100vh;
   padding: 0 1.5rem;
-  /* Experiment */
+  /* overflow-y: scroll; */
+  /* Flexbox */
   display: flex;
   flex-flow: column;
-  align-content: flex-start;
+  justify-content: space-around;
 }
 
 .side-menu-header {
   margin: 0;
 }
 
+.side-menu-header::after {
+  display: none;
+}
+
 #profile-pic {
-  margin: 1rem 0;
   width: 7rem;
   height: 7rem;
 }
@@ -138,21 +145,17 @@ nav .logo {
   width: 100%;
 }
 
+.side-btn-container {
+  margin-bottom: 1rem;
+}
+
 .side-btn {
   background: #3C58B9;
   margin: 0.3rem 0;
 }
 
-.buttons-row {
-  margin-bottom: 1rem;
-}
-
 .side-menu-header::after {
   display: none;
-}
-
-.financial-row {
-  height: 4rem;
 }
 
 .financial-icon {
@@ -173,25 +176,18 @@ nav .logo {
 
 .income-container {
   border-right: 1px solid rgba(170, 170, 170, 0.80);
-  height: 100%;
 }
 
 .income-wrapper {
   margin: 0;
-  height: 100%;
 }
 
 .income-wrapper::after {
   display:none;
 }
 
-.spending-container {
-  height: 100%;
-}
-
 .spending-wrapper {
   margin: 0;
-  height: 100%;
 }
 
 .spending-wrapper::after {
@@ -199,12 +195,14 @@ nav .logo {
 }
 
 .bank-acc-row {
-  flex-grow: 1;
+  margin: 0 0!important;
 }
 
 .bank-acc-container {
-  text-align: left;
-  height: 100%;
+  position: relative;
+  padding-top: 56.25%!important;
+  background: #3C58B9;
+  border-radius: 1rem;
 }
 
 #bank-acc {
@@ -213,11 +211,11 @@ nav .logo {
 }
 
 .bank-info {
-  position: relative;
-  background: #3C58B9;
-  width: 100%;
-  height: 90%;
-  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .add-btn {
@@ -266,12 +264,12 @@ nav .logo {
 
 .budget-item {
   position: relative;
-  height: 9rem;
-  border-radius: 10px;
+  padding-top: 56.25%;
+  border-radius: 1.1rem;
 }
 
 .budget-title {
-  position: relative;
+  position: absolute;
   color: white;
   opacity: 0.7;
   top: 7%;
